GitVersion1/objects/CDH_Territory_Account__c.object
<CustomObject>
    <description>To be Removed - Junction object to link Territories to Accounts</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CDH_Account__r.CDH_Link_to_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAN_Business__c</fullName>
        <formula>TEXT(CDH_Territory__r.CDH_CAN_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAN Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Account_Name__c</fullName>
        <formula>CDH_Account__r.CDH_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDH Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDH Account</label>
        <referenceTo>CDH_Account__c</referenceTo>
        <relationshipName>Territory_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_Business__c</fullName>
        <formula>TEXT(CDH_Territory__r.CDH_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_External_Territory_ID__c</fullName>
        <formula>CDH_Territory__r.CDH_External_Territory_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Territory #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Territory_Name__c</fullName>
        <formula>CDH_Territory__r.CDH_Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Territory_Owner__c</fullName>
        <formula>CDH_Territory__r.CDH_Territory_Owner__r.FirstName + &apos; &apos; +  CDH_Territory__r.CDH_Territory_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDH Territory</label>
        <referenceTo>CDH_Territory__c</referenceTo>
        <relationshipName>Territory_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <formula>CDH_Territory__r.CDH_Primary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>CDH Territory/Account - To be Removed</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDH_Account__c</columns>
        <columns>CDH_Account_Name__c</columns>
        <columns>CDH_Territory__c</columns>
        <columns>CDH_External_Territory_ID__c</columns>
        <columns>CDH_Territory_Name__c</columns>
        <columns>CDH_Territory_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CDH_Business__c</columns>
        <columns>CAN_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CDHTA-{00000}</displayFormat>
        <label>Territory/Account #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDH Territory/Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>